# strawberry-django-phonenumber

./: README.md  lint.sh  poetry-install.sh  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  pythonpackage.yml
strawberry_django_phonenumber/: __init__.py
strawberry_django_phonenumber/types/: __init__.py  phone_number.py
test_app/: models.py  settings.py  urls.py
test_app/migrations/: 0001_initial.py
test_app/schema/: __init__.py  types.py
tests/: conftest.py
tests/graphql/: __init__.py  queries.py  test_users.py
