[tool.poetry]
name = "strawberry-django-phonenumber"
version = "0.2.0"
description = "A strawberry + Django integration for phone numbers"
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]
readme = "README.md"
packages = [{include = "strawberry_django_phonenumber"}]
repository = "https://github.com/UpliftAgency/strawberry-django-phonenumber"
keywords = ["strawberry", "django", "phonenumber", "phone", "number", "phonenumber-field", "graphql", "strawberry_django"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"
django = ">=3"
django-phonenumber-field = {extras = ["phonenumberslite"], version = ">=7"}
strawberry-graphql = {extras = ["debug-server"], version = "*"}
strawberry-graphql-django = ">=0.17"
psycopg2-binary = {version = "*", optional = true}
psycopg = { extras = ["binary"], version = ">=3", optional = true }

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-django = "*"
pytest-flakes = "*"
flake8 = "*"
isort = "*"
safety = "*"
ssort = "*"

[tool.poetry.extras]
psycopg2 = ["psycopg2-binary"]
psycopg = ["psycopg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
